@@ -22,6 +22,7 @@ BEGIN {
 		      WK_ERR_UNRECOVERABLE_ERROR
 		      WK_ERR_REQUEST_TOKEN_STALE
 		      WK_ERR_WEBAUTH_SERVER_ERROR
+                      WK_ERR_LOGIN_FORCED
 		      );
     @EXPORT_OK   = ();
 }
@@ -34,13 +35,15 @@ sub WK_ERR_LOGIN_FAILED                () {2;}
 sub WK_ERR_UNRECOVERABLE_ERROR	       () {3;}
 sub WK_ERR_REQUEST_TOKEN_STALE         () {4;}
 sub WK_ERR_WEBAUTH_SERVER_ERROR        () {5;}
+sub WK_ERR_LOGIN_FORCED                () {6;}
 
 our @ErrorNames = qw(SUCCESS
 		     UNUSED USER_AND_PASS_REQUIRED
 		     LOGIN_FAILED
 		     UNRECOVERABLE_ERROR
 		     REQUEST_TOKEN_STALE
-		     WEBAUTH_SERVER_ERROR);
+		     WEBAUTH_SERVER_ERROR
+                     LOGIN_FORCED);
 
 sub new {
     my ($type, $status, $mesg, $pec) = @_;
@@ -131,50 +134,54 @@ The following constants are exported:
   WK_ERR_UNRECOVERABLE_ERROR
   WK_ERR_REQUEST_TOKEN_STATLE
   WK_ERR_WEBAUTH_SERVER_ERROR
+  WK_ERR_LOGIN_FORCED
 
 =over 4
 
 =item WK_SUCCESS
 
- This status code never comes back as part of an exception, though
- it might be returned by a function that uses these status codes
- as return values.
+This status code never comes back as part of an exception, though it might
+be returned by a function that uses these status codes as return values.
 
 =item WK_ERR_USER_AND_PASS_REQUIRED
 
- This status code indicates that a function was called
- that required a username and password. The user should
- be prompted for their username and the function should be
- called again.
+This status code indicates that a function was called that required a
+username and password. The user should be prompted for their username and
+the function should be called again.
 
 =item WK_ERR_LOGIN_FAILED
 
- This status code indicates that a function was called
- that attempted to validate the username and password and
- could not, due to an invalid user or password. The
- user should be re-prompted for their username/password
- and the function should be called again.
+This status code indicates that a function was called that attempted to
+validate the username and password and could not, due to an invalid user or
+password. The user should be re-prompted for their username/password and the
+function should be called again.
 
 =item WK_ERR_UNRECOVERABLE_ERROR
 
- This status code indicates that a function was called
- and an error occured that can not be recovered from. If
- you are in the process of attempting to log a user in,
- you have no choice but to display an error message to
- the user and not prompt again.
+This status code indicates that a function was called and an error occured
+that can not be recovered from. If you are in the process of attempting to
+log a user in, you have no choice but to display an error message to the
+user and not prompt again.
 
 =item WK_ERR_REQUEST_TOKEN_STALE
 
- This status code indicates the user took too long to login, and the
- the request token is too old to be used.
+This status code indicates the user took too long to login, and the the
+request token is too old to be used.
 
 =item WK_ERR_WEBAUTH_SERVER_ERROR
 
- This status code indicates something happened that most likely indicates
- the webauth server that made the request is mis-configured and/or
- unauthorized to make the request. It is similar to WK_ERR_UNRECOVERABLE_ERROR
- except that the error message to the user should indicate that the
- problem is most likely with the server that redirected them.
+This status code indicates something happened that most likely indicates the
+webauth server that made the request is mis-configured and/or unauthorized
+to make the request. It is similar to WK_ERR_UNRECOVERABLE_ERROR except that
+the error message to the user should indicate that the problem is most
+likely with the server that redirected them.
+
+=item WK_ERR_LOGIN_FORCED
+
+This status code indicates that a function was called that required a
+username and password even if single sign-on credentials were available.
+The user should be prompted for their username and password and the function
+should be called again with that data.
 
 =back
 
@@ -184,35 +191,34 @@ The following constants are exported:
 
 =item match($exception[, $status])
 
-  This class function (not a method) returns true if the given
-  $exception is a WebKDC::WebKDCException. If $status is specified, then
-  $exception->status() will also be compared to $status.
+This class function (not a method) returns true if the given $exception is a
+WebKDC::WebKDCException. If $status is specified, then $exception->status()
+will also be compared to $status.
 
 =item new(status, message, wrapped_exception)
 
-  This method is used to created new WebKDC::WebKDCException objects.
+This method is used to created new WebKDC::WebKDCException objects.
 
 =item status()
 
-  This method returns the WebKDC::WebKDCException status code for the exception,
-  which will be one of the WK_ERR_* codes.
+This method returns the WebKDC::WebKDCException status code for the
+exception, which will be one of the WK_ERR_* codes.
 
 =item message()
 
-  This method returns the error message that was
-  used in the constructor.
+This method returns the error message that was used in the constructor.
 
 =item error_code()
 
-  This method returns the WebKDC errorCode (if there was one).
+This method returns the WebKDC errorCode (if there was one).
 
 =item verbose_message()
 
-  This method returns a verbose error message, which consists
-  of the status code, message, and any error code.
+This method returns a verbose error message, which consists of the status
+code, message, and any error code.
 
-  The verbose_message method is also called if the exception is
-  used as a string.
+The verbose_message method is also called if the exception is used as a
+string.
 
 =back
 
